# UR5_working

src/: close_gripper.py  open_gripper.py
src/aruco_ros/aruco_ros/launch/: single.launch  single_ur5.launch  ur5_aruco.launch
src/calibration/: ost.txt  ost.yaml
src/calibration_2/: ost.txt  ost.yaml
src/calibration_data/: calibration.yaml  calibration_22.yaml
src/easy_handeye/easy_handeye/calibration/: calibrate_rs_eye_on_hand.yaml
src/easy_handeye/easy_handeye/launch/: calibrate.launch  calibrate_2.launch  calibrate_rs.launch  publish.launch  publish_rs.launch  rviz_easy_handeye.config  ur5_calibrate.launch  ur5_publish.launch
src/hand_eye_calbration/: calibrate_2.launch  camera_poses.launch  joint.yaml  joint_states_calibrate.yaml  samples.yaml  samples_2.yaml
src/moveit_calibration/moveit_calibration_gui/handeye_calibration_rviz_plugin/src/: handeye_control_widget.cpp
src/moveit_task_constructor/demo/scripts/: pickplace.py
src/moveit_task_test/: CMakeLists.txt  package.xml
src/moveit_task_test/scripts/: docking_position.py  docking_position1.py  follow_marker.py  follow_marker_a.py  follow_marker_b.py  follow_marker_c.py  follow_marker_d.py  home_move.py  so_annoying.py
src/moveit_task_test/scripts/archive/: aruco_subscriber.py  follow_marker_1.py  follow_marker_2.py  follow_marker_3.py  follow_marker_4.py  follow_marker_6.py  follow_marker_ui.py  get_pose.py  gripper.py  move_to_node.py  move_ur5.py  servo_1.py
src/sim_arena/: CMakeLists.txt  package.xml
src/sim_arena/launch/: rviz.launch
src/sim_arena/launch/archive/: rviz_1.launch  rviz_gripper.launch  ur5_arena_test.launch
src/universal_robot/ur5_moveit_config/config/: ompl_planning.yaml
src/universal_robot/ur5_moveit_config/launch/: moveit.rviz
src/ur_app_youtube/config/: config.rviz
src/ur_app_youtube/launch/: rviz_ur5.launch  rviz_ur5_gripper.launch  rviz_ur5_gripper_camera.launch  spawn_ur5_eff_controller.launch  spawn_ur5_gripper.launch  spawn_ur5_gripper_camera.launch
src/ur_app_youtube/urdf/: ur5_yt.xacro  ur5_yt_gripper.xacro  ur5_yt_gripper_camera.xacro
src/ur_app_youtube/urdf/sensors/: kinetic_rgbd.urdf.xacro
src/ur_gripper_moveit_config/: .setup_assistant
src/ur_gripper_moveit_config/config/: gazebo_ur5_robot.urdf  ur5_robot.srdf
src/ur_gripper_moveit_config/launch/: moveit_planning_execution.launch  planning_context.launch
src/user_interface/: sample_1.py
